--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ html5up.net | @ajlkn
 			<header id="header">
 				<div class="inner">
                     
-					<a href="#" class="image avatar"><img src="images/cat.jpeg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/me.png" alt="" /></a>
 					<h1><strong>Chante Douglas
                     </strong></h1>
-                    <p>how to change bg?</p>
+                    <p></p>
 				</div>
 			</header>
 
@@ -44,21 +44,21 @@ html5up.net | @ajlkn
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Portfolio</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<h3>CV</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
+								<h3>Design Work</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
+								<h3>Websites and Projects</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
                             
