linkedin added - contact removed

--- a/index.html
+++ b/index.html
@@ -107,40 +107,12 @@ html5up.net | @ajlkn
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Have a request? </p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Toronto, Ontario<br />
-										Canada<br />
-										
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										647-466-6225
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">chanted0731@gmail.com</a>
-									</li>
-								</ul>
-							</div>
-						</div>
+						<h2>Get In Touch!</h2>
+						<p>Connect with me on LinkedIn:</p>
+                        <ul class="actions">
+                                <li><a
+                                href="https://www.linkedin.com/in/chante-douglas-a260871a3/"target="_blank"class="button">My LinkedIn Profile</a></li>
+						
 					</section>
 
 				<!-- Four -->
