--- a/current.html
+++ b/current.html
@@ -6,7 +6,7 @@ html5up.net | @ajlkn
 -->
 <html>
 	<head>
-		<title>Chante Douglas - HOME</title>
+		<title>Current</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
