audio intro added

--- a/current.html
+++ b/current.html
@@ -57,9 +57,9 @@ html5up.net | @ajlkn
                         <hr class="solid">
 						
                         <h2>C4 Placement</h2>
-                        <p>For the 2022-2023 school year I am participating in York University's C4 placement program. C4 is the Cross-Campus Capstone Classroom, in which students work in multi-disciplinary teams to engage in project-based placement. In groups, students work closely with community partners on a project that create change within their organization. For this C4 term, the group I am in will be partering with Anne J MacArthur Public School to address the challenge question "How can Grade 6 students promote environmental education in their local community?"</p>
+                        <p>For the 2022-2023 school year I am participating in York University's C4 placement program. C4 is the Cross-Campus Capstone Classroom, in which students work in multi-disciplinary teams to engage in project-based placement. In groups, students work closely with community partners on a project that creates change within their organization. For this C4 term, the group I am in will be partnering with Anne J MacArthur Public School to address the challenge question "How can Grade 6 students promote environmental education in their local community?"</p>
                         
-                        <p> I am hoping to gain project management experience during this group project and partnership</p>
+                        <p> I am hoping to gain project management experience during this group project and partnership.</p>
                                                 <p>More information to come.</p>
                                                 <hr class="solid">
 
