--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@ html5up.net | @ajlkn
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Hello!<br />
+							<h2>Welcome!<br />
 							</h2>
 						</header>
 						<p>
-                            My name is Chante Douglas, and I am a writer and student. I create websites, posters, and videos to publish online. In my current job I create documents and presentations, and engage with project plans. With digital authorship, I enjoy using platforms that allow me to use a variety of media to convey the message I want, whether it be through text, videos, images, or sound. I am always searching for ways to improve my practices and try new things.
+                            My name is Chante Douglas, and I am a writer and student. With digital authorship, I enjoy using platforms that allow me to use a variety of media to convey the message I want, whether it be through text, videos, images, or sound. I am always searching for ways to improve my practices and try new things.
                         </p>
+                        <audio controls>
+                            <source src="intro.mp3" type="audio/ogg">
+                            <source src="intro.mp3" type="audio/mpeg">
+                        </audio>
 						
 					</section>
 
