--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ html5up.net | @ajlkn
 								<h3>CV</h3>
 								<p>Click to view my CV.</p>
                                 <ul class="actions">
-							<li><a href="cv.html" target="_blank" class="button">Learn More</a></li>
+							<li><a href="cv.html" target="_blank" class="button">More</a></li>
 						</ul>
                                 
 							</article>
