--- a/writing.html
+++ b/writing.html
@@ -94,22 +94,22 @@ hr.solid {
                         <h3><a href="https://sites.google.com/view/caribanadigitalexhibit/introduction-to-caribana" target="_blank">Caribana: A Digital Exhibit</a> </h3>                        
                         <div>
                             <img src="images/caribana.png" alt="Caribana Site" width="100%" height="300"></div>
-                        <p>A Google sites project created to explore the cultural significance of Caribana</p>
+                        <p>A Google sites project created to explore the cultural significance of Caribana.</p>
                         <ul class="actions">
 							<li><a href="https://sites.google.com/view/caribanadigitalexhibit/introduction-to-caribana" target="_blank" class="button">Browse the Exhibit</a></li>
                         </ul> 
                         <hr class="solid">
                         
-                        <h3><a href="https://sites.google.com/view/abriefhorrorhistory/home" target="_blank">Horror: A Brief History</a> </h3>                  
+                        <h3><a href="https://sites.google.com/view/abriefhorrorhistory/home" target="_blank">Horror: An Introduction</a> </h3>                  
                         <img src="images/horror.png" alt="Horror Site" width="100%" height="400">
-                        <p>A project that looks at the history of horror media</p>
+                        <p>A project that looks at the history of horror media.</p>
                         <ul class="actions">
 							<li><a href="https://sites.google.com/view/caribanadigitalexhibit/introduction-to-caribana" target="_blank" class="button">Explore  Horror History</a></li>
                         </ul> 
                         <hr class="solid">
                         
                         <h3><a href="https://sites.google.com/view/endsarstoronto2020/home" target="_blank">#EndSARS Protest  Toronto 2020</a> </h3>           <img src="images/sars.png" alt="SARS Site" width="100%" height="400">
-                        <p>A project that looks at the #EndSARS protest in Toronto</p>
+                        <p>A project that looks at the #EndSARS protest in Toronto.</p>
                         <ul class="actions">
 							<li><a href="https://sites.google.com/view/endsarstoronto2020/home" target="_blank" class="button">Learn About the Protests</a></li>
                         </ul> 
