updated how to thingy

--- a/class.html
+++ b/class.html
@@ -70,7 +70,7 @@ html5up.net | @ajlkn
                         
                         <h1>Projects</h1>
                         <h3>How-to Guide: Recording a Video on Zoom</h3>
-                        <p>Description</p>
-                         <iframe src="images/Chante%20Douglas%20Resume%202022.docx.pdf" width="100%" height="600px"></iframe>
+                        <p>A step-by-step guide on how to record audio and video using Zoom.</p>
+                         <iframe src="images/howto.pdf" width="100%" height="600px"></iframe>
                         <hr class="solid">
                         
