updated with leah's link

--- a/class.html
+++ b/class.html
@@ -74,3 +74,10 @@ html5up.net | @ajlkn
                          <iframe src="images/howto.pdf" width="100%" height="600px"></iframe>
                         <hr class="solid">
                         
+                        <h3>How-to Guide: Create Separate Audio Tracks on Zoom</h3>
+                        <p>An additional step-by-step guide on how to create separate audio tracks while using Zoom, created by my colleague Leah Ciani.</p>
+                        <ul class="actions">
+                                <li><a
+                                href="https://sites.google.com/view/how2audio/home?pli=1"target="_blank"class="button">How-to Guide</a></li>
+                        
+                        <hr class="solid">
