design page title update

--- a/designs.html
+++ b/designs.html
@@ -114,7 +114,7 @@ body {
                     </strong>
                     </h1>
                         
-                        <h3>Designs </h3>
+                        <h3>Design Work </h3>
                     </div>
                 
                     <div class="center">
