--- a/writing.html
+++ b/writing.html
@@ -74,7 +74,8 @@ hr.solid {
                         </p>
                         <hr class="solid">
                         <h3>Kairos "Inventio" Placement Project</h3>
-                        <iframe src="https://express.adobe.com/page/iw3LdvMNCvYzW/" title="Misinformation in Digital Spaces" width="100%" height="350"></iframe>
+                        <iframe width="100%" height="400" src="https://youtu.be/k3dK1vpiXjQ">
+                        </iframe>
                         <p>For the course "Digital Authoring Practicum" I, along with another colleague, had the opportunity to complete our placement project with Kairos: A Journal of Rhetoric, Technology, and Pedagogy.</p>
                         <p>We conducted interviews with authors who had published with the journal, and created short, 5-minute highlight videos.These videos will be published under the journal's "Inventio" section.</p>
                         <ul class="actions">
