--- a/doingnow.html
+++ b/doingnow.html
@@ -58,7 +58,7 @@ html5up.net | @ajlkn
                         <h2>C4 Placement</h2>
                         <p>For the 2022-2023 school year I am participating in York University's C4 placement program. C4 is the Cross-Campus Capstone Classroom, in which students work in multi-disciplinary teams to engage in project-based placement. In groups, students work closely with community partners on a project that creates change within their organization. For this C4 term, the group I am in will be partnering with Irma Coulson Public School Public School to address the challenge question "How can Grade 6 students promote environmental education in their local community?"</p>
 
-                        <p> April 2023 UPDATE: This project is now in the end stages. The team is working closely with our project partners to finalize our deliverables, which include kits for the students to create their own self-watering gardens, and an accompanying workbook with information about sustainability, Indigenous gardening practices, and food justice. </p>
+                        <p> April 2023 UPDATE: This project is now in its end stage. The team is working closely with our project partners to finalize our deliverables, which include kits for the students to create their own self-watering gardens, and an accompanying workbook with information about sustainability, Indigenous gardening practices, and food justice. </p>
                         
                         <p>For more information about this project, check out the team's Community Impact video:</p>
                         
