--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-Chante Dougas
+Chanté Dougas
 html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Chante Douglas - HOME</title>
+		<title>Chanté Douglas - HOME</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,7 +31,7 @@ html5up.net | @ajlkn
                     </div>
                        
                     <div class="a">
-                    <h1><strong>Chante Douglas
+                    <h1><strong>Chanté Douglas
                     </strong>
                     </h1>
                     </div>
@@ -52,7 +52,7 @@ html5up.net | @ajlkn
 							</h2>
 						</header>
 						<p>
-                            My name is Chante Douglas, and I am a writer and student. With digital authorship, I enjoy using platforms that allow me to use a variety of media to convey the message I want, whether it be through text, videos, images, or sound. I am always searching for ways to improve my practices and try new things.
+                            My name is Chanté Douglas, and I am a writer and student. With digital authorship, I enjoy using platforms that allow me to use a variety of media to convey the message I want, whether it be through text, videos, images, or sound. I am always searching for ways to improve my practices and try new things.
                         </p>
                         <audio controls>
                             <source src="intro.mp3" type="audio/ogg">
