intro to me updated

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@ html5up.net | @ajlkn
 							</h2>
 						</header>
 						<p>
-                            My name is Chanté Douglas, and I am a writer and student. With digital authorship, I enjoy using platforms that allow me to use a variety of media to convey the message I want, whether it be through text, videos, images, or sound. I am always searching for ways to improve my practices and try new things.
-                        </p>
+                            My name is Chanté Douglas, and I am a writer and student. My interests lie in how writing and communications are used in a business setting. How can my skills make a difference concerning business communications, sustainable practices, and projects?</p>
                         <audio controls>
                             <source src="intro.mp3" type="audio/ogg">
                             <source src="intro.mp3" type="audio/mpeg">
@@ -76,8 +75,8 @@ html5up.net | @ajlkn
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/writings.jpeg" class="image fit thumb"><img src="images/thumbs/writings.jpeg" alt="" /></a>
-								<h3>Writing Samples</h3>
-                                <p>Samples of pieces I've written.</p>
+								<h3>Projects and Writing Samples</h3>
+                                <p>Samples of my work</p>
                                 <ul class="actions">
                                 <li><a
                                 href="writing.html"target="_blank"class="button">More</a></li>
@@ -97,7 +96,7 @@ html5up.net | @ajlkn
                             <article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/schedule.jpeg" class="image fit thumb"><img src="images/thumbs/schedule.jpeg" alt="" /></a>
 								<h3>What Am I Doing Now?</h3>
-								<p>Upcoming projects I'm working on<p>
+								<p>Ongoing projects I'm working on.<p>
                                 <ul class="actions">
                                 <li><a
                                 href="doingnow.html"target="_blank"class="button">More</a></li>
@@ -107,7 +106,7 @@ html5up.net | @ajlkn
                             <article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/schedule.jpeg" class="image fit thumb"><img src="images/thumbs/schedule.jpeg" alt="" /></a>
 								<h3>Classwork</h3>
-								<p>Links to activities I've done in class<p>
+								<p>Links to some of the activities I've done in class - 2022-2023.<p>
                                 <ul class="actions">
                                 <li><a
                                 href="class.html"target="_blank"class="button">More</a></li>
