--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ html5up.net | @ajlkn
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/writings.jpeg" class="image fit thumb"><img src="images/thumbs/writings.jpeg" alt="" /></a>
 								<h3>Projects and Writing Samples</h3>
-                                <p>Samples of my work</p>
+                                <p>Samples of my work.</p>
                                 <ul class="actions">
                                 <li><a
                                 href="writing.html"target="_blank"class="button">More</a></li>
