accent aigu - modified

--- a/doingnow.html
+++ b/doingnow.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-Chante Dougas
+Chanté Dougas
 html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -31,7 +31,7 @@ html5up.net | @ajlkn
                     </div>
 
                     <div class="a">
-                    <h1><strong>Chante Douglas
+                    <h1><strong>Chanté Douglas
                     </strong>
                     </h1>
                         <h2>Upcoming Projects</h2>
