--- a/class.html
+++ b/class.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-Chante Dougas
+Chanté Dougas
 html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -38,7 +38,7 @@ html5up.net | @ajlkn
                     
                        
                     <div class="a">
-                    <h1><strong>Chante Douglas
+                    <h1><strong>Chanté Douglas
                     </strong>
                     </h1>
                     <h1><strong>In-Class Assignments
