--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-Chante Dougas
+Chanté Dougas
 html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -40,7 +40,7 @@ html5up.net | @ajlkn
                     </div>
                        
                     <div class="a">
-                    <h1><strong>Chante Douglas
+                    <h1><strong>Chanté Douglas
                     </strong>
                     </h1>
                     </div>
@@ -60,7 +60,7 @@ html5up.net | @ajlkn
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h1>Chante Douglas's Resume<br />
+							<h1>Chanté Douglas's Resume<br />
 							</h1>
 						</header>
                         
