--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-Chante Dougas
+Chanté Dougas
 html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Chante Douglas - HOME</title>
+		<title>Chanté Douglas - HOME</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,7 +41,7 @@ html5up.net | @ajlkn
                     </div>
                        
                     <div class="a">
-                    <h1><strong>Chante Douglas
+                    <h1><strong>Chanté Douglas
                     </strong>
                     </h1>
                     </div>
