profile picture updated

--- a/doingnow.html
+++ b/doingnow.html
@@ -27,7 +27,7 @@ html5up.net | @ajlkn
 				<div class="inner">
 
                     <div class="a">
-                    <img src="images/me.png" alt="me" width="220" height="180" style="width:200px">
+                    <img src="images/me2.png" alt="me" width="220" height="180" style="width:200px">
                     </div>
 
                     <div class="a">
